--- a/benchmark/lammp/CMakeLists.txt
+++ b/benchmark/lammp/CMakeLists.txt
@@ -4,11 +4,10 @@ file(GLOB_RECURSE BENCH_SRCS
 )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-
 add_executable(LammpBenchmark ${BENCH_SRCS})
 target_link_libraries(LammpBenchmark PRIVATE LammpCore)
 
-# （可选）设置可执行文件输出目录（若需单独存放，可覆盖根目录配置）
+# 设置可执行文件输出目录（若需单独存放，可覆盖根目录配置）
 # set_target_properties(LammpBenchmark PROPERTIES
 #     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/dist/benchmark_bin
 # )
