--- a/src/lammp/CMakeLists.txt
+++ b/src/lammp/CMakeLists.txt
@@ -41,8 +41,8 @@ if(TARGET LammpCore)
         PDB_OUTPUT_DIRECTORY "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}"
         # 导入库输出路径
         ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}"
-        ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_ROOT}/lib/Debug"
-        ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_ROOT}/lib/Release"
+        ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}"
+        ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}"
         # DLL输出路径
         RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
         RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_ROOT}/bin/Debug"
