fix: output directories

--- a/src/lammp/CMakeLists.txt
+++ b/src/lammp/CMakeLists.txt
@@ -45,8 +45,8 @@ if(TARGET LammpCore)
         ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}"
         # DLL输出路径
         RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
-        RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_ROOT}/bin/Debug"
-        RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_ROOT}/bin/Release"
+        RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
+        RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
     )
 
     # MinGW下设置DLL后缀
